Fixed minor typo

--- a/age_gender_exploration.ipynb
+++ b/age_gender_exploration.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the data from Italy to 26 March 2020"
+    "### Using the data from Italy up to 26 March 2020"
    ]
   },
   {
