--- a/deathrate_mapping.ipynb
+++ b/deathrate_mapping.ipynb
@@ -55,7 +55,6 @@
     "def deathrate_female(x):\n",
     "    return sigmoid(np.sqrt(x) + A_FEMALES) * B_FEMALES\n",
     "\n",
-    "\n",
     "def get_deathrate(age, sex):\n",
     "    if sex == 0:\n",
     "        return deathrate_male(age)\n",
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,12 +75,12 @@
     "\n",
     "df['death_rate'] = deathrates\n",
     "\n",
-    "sorted= df.sort_values(by=['V1'])"
+    "sorted_df = df.sort_values(by=['V1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +210,7 @@
        "[269 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
