Multiple food queues test

--- a/NetworkModeling.ipynb
+++ b/NetworkModeling.ipynb
@@ -1495,9 +1495,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Data Science",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dsci"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1509,7 +1509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
