--- a/notebook_experiments/CreateGraphAndInterventions.ipynb
+++ b/notebook_experiments/CreateGraphAndInterventions.ipynb
@@ -1245,9 +1245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Data Science",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dsci"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1259,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
