Added generic multiple food queues function

--- a/MultipleFoodQueues.ipynb
+++ b/MultipleFoodQueues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 18700/18700 [00:14<00:00, 1264.43it/s]\n"
+      "100%|██████████| 18700/18700 [00:26<00:00, 708.43it/s] \n"
      ]
     }
    ],
@@ -99,6 +99,47 @@
     "                                       age_list=list(sample_pop[\"age\"]),\n",
     "                                       sex_list = list(sample_pop[\"sex\"]),\n",
     "                                       n_ethnicities=n_ethnic_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.graph.Graph at 0x7f3a7f8f8050>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiple_food_queues(graph, n_food_queues_per_block, food_weight, nodes_per_struct, grids):\n",
+    "    for grid in grids:\n",
+    "        longest_axis = np.argmax(grid.shape)\n",
+    "        index_limit = grid.shape[longest_axis] // n_food_queues_per_block\n",
+    "        subgrids = []\n",
+    "        if not longest_axis:\n",
+    "            for i in range(n_food_queues_per_block):\n",
+    "                subgrids.append(grid[i * index_limit:(i + 1) * index_limit, :])\n",
+    "        else:\n",
+    "            for i in range(n_food_queues_per_block):\n",
+    "                subgrids.append(grid[:, i * index_limit:(i + 1) * index_limit])\n",
+    "        \n",
+    "        for i in range(len(subgrids)):\n",
+    "            subgrid = subgrids[i]\n",
+    "            nodes_per_struct_subgrid = [nodes_per_struct[subgrid[i][j]] for i in range(len(subgrid)) for j in range(len(subgrid[i]))]\n",
+    "            \n",
+    "            graph = connect_food_queue(graph, nodes_per_struct_subgrid, food_weight, \"food_%i\" % i)\n",
+    "    \n",
+    "    return graph\n",
+    "\n",
+    "food_weight = 0.407\n",
+    "multiple_food_queues(graph, 2, food_weight, nodes_per_struct, [grid_isoboxes, grid_block1, grid_block2, grid_block3])"
    ]
   },
   {
