--- a/NetworkModeling.ipynb
+++ b/NetworkModeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,9 +707,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Data Science",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dsci"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
