--- a/notebooks/MultipleFoodQueues.ipynb
+++ b/notebooks/MultipleFoodQueues.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -439,9 +436,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Data Science",
    "language": "python",
-   "name": "python3"
+   "name": "dsci"
   },
   "language_info": {
    "codemirror_mode": {
@@ -453,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
