--- a/notebooks/CreateGraphAndInterventions.ipynb
+++ b/notebooks/CreateGraphAndInterventions.ipynb
@@ -1257,9 +1257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Data Science",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dsci"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1271,7 +1271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
