Custom models.py

--- a/NetworkModelingWithTTILoop.ipynb
+++ b/NetworkModelingWithTTILoop.ipynb
@@ -1229,6 +1229,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_groups = create_node_groups(graph_1fq)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [],
@@ -1239,7 +1248,7 @@
     "                              a=PCT_ASYMPTOMATIC, h=PCT_HOSPITALIZED, f=PCT_FATALITY,              \n",
     "                              alpha=ALPHA, beta_pairwise_mode=BETA_PAIRWISE_MODE, delta_pairwise_mode=DELTA_PAIRWISE_MODE,\n",
     "                              G_Q=G_quarantine, q=0, beta_Q=BETA_Q, isolation_time=14,\n",
-    "                              initE=INIT_EXPOSED)"
+    "                              initE=INIT_EXPOSED, node_groups=node_groups)"
    ]
   },
   {
